# RealtimeDataPool

./: .gitignore  AGENTS.md  LICENSE  README.md  REQUIREMENTS.md  audit.py  check_ob.py  config.yaml  diag_f170.py  pyproject.toml  rdp.bat  rdp.sh  report.py  smoke_15min.py  smoke_30s.py  smoke_warn_cooldown.py  test_partial_save.py  verify_query_latest.py
.harness/: agent.md
.harness/reins/rdp-engineer/: agent.md
agents/rdp-engineer/: agent.md
data/: .gitignore
docs/: 2026-07-02-fetch-resilience.md  2026-07-03-codex-code-review-fixes.md  2026-07-03-pool-recovery-and-cooldown.md
scripts/: _cleanup_polluted_data.py  _debug_em_orderbook.py  _debug_tencent.py  _smoke_fetcher.py  _smoke_latency_tracker.py  _smoke_new_logs.py  monitor_002475.py  monitor_combined.py  start.py
src/rdp/: __init__.py  api.py  cli.py  fetcher.py  instruments.py  scheduler.py  storage.py
tests/: test_api.py  test_fetcher.py  test_instruments.py  test_scheduler.py  test_storage.py
web/: app.js  index.html  style.css
