[project]
name = "realtime-data-pool"
version = "0.1.0"
description = "A 股实时盯盘数据池 — 30 秒级全市场快照，支持多源热备 + REST 查询 + 监控页面"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "RealtimeDataPool" },
]
keywords = ["quant", "a-share", "realtime", "data-pool", "snapshot"]

dependencies = [
    "aiohttp>=3.9",         # 异步 HTTP 客户端（多源并发抓取）
    "fastapi>=0.110",       # REST API
    "uvicorn[standard]>=0.27",  # ASGI server
    "pydantic>=2.5",        # 数据模型
    "pandas>=2.0",          # 数据处理 / 导出
    "pyyaml>=6.0",          # 配置
    "requests>=2.31",       # 备用同步 HTTP（股票池初始化）
    "pyarrow>=24.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[project.scripts]
# CLI 入口
rdp-pool = "rdp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rdp"]

[tool.ruff]
line-length = 110
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501", "B008", "E402", "E701", "E702"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]
"scripts/**/*.py" = ["E402"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
